<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Potlatch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Main Menu</string>
    <string name="title_activity_CreateGift">Create a gift</string>
    <string name="title_activity_DisplayGift">Display a gift</string>
    <string name="title_activity_GiftList">Search a gift by title</string>
    <string name="title_activity_ShowGift">Select a gift to show</string>
    <string name="title_activity_ShowTopGiver">Show top giver</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="image">Image</string>
    <string name="capture_picture">Capture picture</string>
    <string name="browse">Browse picture</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="server">Server IP or Hostname</string>
    <string name="localhost">https://10.0.2.2:8443</string>
    <string name="admin">admin</string>
    <string name="pass">pass</string>
    <string name="enter_title_to_view_here">Enter gift title to view </string>
    <string name="select">select</string>
    <string name="todo">TODO</string>
    <string name="refreshRate">Touch count refresh rate</string>
    <string name="title_activity_settings">Preference Setting</string>
    <string name="action_preference">Preference</string>
    <string name="pref_title_refresh_rate">Change touched count refresh rate </string>
    <string name="pref_title_prohabit_gift">Set flagged type which gift prohabits to view </string>
    <string name="pref_header_general">General</string>
    <string name="gift_list_button_label_add">ADD</string>
    <string name="gift_list_filter_hint">Title Filter...</string>
    <string name="tags_list_button_label_add">ADD</string>
    <string name="tags_list_button_label_refresh">REFRESH</string>

    <string-array name="pref_refresh_rate_list_titles">
        <item>1 min</item>
        <item>5 min</item>
        <item>60 min</item>
    </string-array>
    <string-array name="pref_refresh_rate_list_values">
        <item>1</item>
        <item>5</item>
        <item>60</item>
    </string-array>
    <string-array name="prohabit_gift_list_titles">
        <item>Inappropriate</item>
        <item>Obscene</item>
    </string-array>
    <string-array name="prohabit_gift_list_values">
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="title_activity_gift_list">GiftListActivity</string>
    <string name="done">Done</string>

</resources>