<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginScreenActivity" >

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"        
        android:layout_alignParentLeft="true"        
        android:ems="10"
        android:text="@string/userName" />
    
    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/TextView1"
        android:layout_alignBottom="@id/TextView1"   
        android:layout_toRightOf="@id/TextView1"   
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/userName"
        android:text="@string/admin" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/password"
        android:layout_alignBottom="@+id/password"
        android:layout_alignParentLeft="true"
        android:text="@string/password" 
        android:ems="10" />
    
    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_toRightOf="@id/TextView2"   
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="@string/pass" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/login" />

    <EditText
        android:id="@+id/server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/userName"
        android:layout_alignLeft="@id/userName"
        android:layout_marginBottom="58dp"
        android:ems="10"
        android:hint="@string/server"
        android:text="@string/localhost"
        android:visibility="invisible" >

        <requestFocus />
    </EditText>




</RelativeLayout>